# duroxide-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
ci/smoke/: README.md  run-local.ps1  run-local.sh  run-registry.ps1  run-registry.sh  smoke.py
docs/: architecture.md  user-guide.md
python/duroxide/: __init__.py  context.py  driver.py
python/duroxide/libduroxide_python.dylib.dSYM/Contents/: Info.plist
src/: client.rs  handlers.rs  lib.rs  pg_provider.rs  provider.rs  runtime.rs  types.rs
tests/: test_admin_api.py  test_advanced_features.py  test_async_blocks.py  test_copilot_chat.py  test_e2e.py  test_init_tracing.py  test_kv_store.py  test_races.py  test_sessions.py  test_tags.py  test_typed_apis.py
tests/scenarios/: test_toygres.py
