[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "duroxide"
version = "0.1.6"
description = "Python SDK for the Duroxide durable execution runtime"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "psycopg2-binary>=2.9"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "duroxide._duroxide"

[tool.pytest.ini_options]
testpaths = ["tests"]
